# readme_renderer

./: .gitignore  .gitpod.yml  .travis.yml  CHANGES.rst  MANIFEST.in  README.rst  Readme.md  classifiers.txt  pyproject.toml  pytest.ini  setup.py  tox.ini
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh  pyenv.Dockerfile
.github/: CONTRIBUTING.md  dependabot.yml
.github/workflows/: ci.yml  release.yml  zizmor.yml
readme/: __about__.py  clean.py  linkify.py  markdown.py  rst.py  utils.py
readme/integration/: __init__.py  distutils.py
readme_renderer/: __about__.py  __main__.py  any.py  clean.py  markdown.py  rst.py  txt.py
readme_renderer/integration/: distutils.py
tests/: test_any.py  test_base.py  test_clean.py  test_cli.py  test_integration_distutils.py  test_markdown.py  test_noextra.py  test_rst.py  test_txt.py
tests/fixtures/: test_CommonMark_002.html  test_CommonMark_003.html  test_CommonMark_003.md  test_CommonMark_004.html  test_CommonMark_004.md  test_CommonMark_005.html  test_CommonMark_005.md  test_CommonMark_006.html  test_CommonMark_006.md  test_CommonMark_007.html  test_CommonMark_007.md  test_CommonMark_008.html  test_CommonMark_008.md  test_CommonMark_009.html  test_CommonMark_009.md  test_CommonMark_smart_strong.html  test_CommonMark_smart_strong.md  test_CommonMark_strong.html  test_CommonMark_strong.md  test_GFM_001.html  test_GFM_001.md  test_GFM_002.html  test_GFM_002.md  test_GFM_003.html  test_GFM_003.md  test_GFM_004.html  test_GFM_004.md  test_GFM_005.html  test_GFM_005.md  test_GFM_006.html  test_GFM_006.md  test_GFM_007.html  test_GFM_007.md  test_GFM_008.html  test_GFM_008.md  test_GFM_009.html  test_GFM_009.md  test_GFM_010.html  test_GFM_010.md  test_GFM_011.html  (+148 more)
tests/fixtures/markdown/: code.html  code.md  headings_and_paragraphs.html  headings_and_paragraphs.md  misc.html  misc.md
